# Netcheck

./: README.md
agent/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent/src/netcheck_agent/: config.py  logger.py  main.py  requests_handler.py  schemas.py  utils.py
agent/src/netcheck_agent/checks/: __init__.py  base_checker.py  dns_checker.py  http_checker.py  ping_checker.py  schemas.py  tcp_checker.py
agent/src/netcheck_agent/http/: heartbeat.py  registration.py
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_07_05_2155-8d6bd1b12e07_initial.py  2025_10_25_1621-4213a33d4c89_add_admin_user.py  2025_10_25_1944-1d598ab862df_add_agents_table.py  2025_10_25_2314-1ee13bd33c69_add_checks_table.py  2025_10_25_2323-49fa436f3df9_change_ckecks_to_one_to_many.py  2025_10_26_0107-4ef40f626291_add_checks_models.py  2025_10_26_0130-fb2404904d9b_add_latency_column.py
backend/src/netcheck_backend/: config.py  database.py  dependencies.py  exception_handler.py  exceptions.py  logger.py  main.py  models.py  security.py  startup_init.py  tasks.py
backend/src/netcheck_backend/api/: __init__.py  agents.py  auth.py  check.py
backend/src/netcheck_backend/schemas/: __init__.py  agent.py  check.py  token.py  user.py
backend/src/netcheck_backend/services/: __init__.py  agent_service.py  check_service.py  token_service.py  user_service.py
backend/src/netcheck_backend/use_cases/: __init__.py  agents.py  token.py  user.py
frontend/: README.md
frontend/Aeza-hackathon/: index.html  (+2 more)
(+20 files in other folders)
