[project]
name = "netcheck-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.7",
    "aiodns>=3.5.0",
    "aiohttp>=3.13.1",
    "aioping>=0.4.0",
    "aiotraceroute>=1.0.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "rmq-service",
    "tenacity>=9.1.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
rmq-service = { git = "https://github.com/imbalet/rmq_service" }

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
